[package]
name = "echbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
chrono = "0.4.23"
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
itertools = "0.10.5"
